--- a/css/styles.css
+++ b/css/styles.css
@@ -156,3 +156,42 @@ body {
   cursor: pointer;
   color: var(--Cyan);
 }
+
+@media screen and (min-width: 1440px) {
+  .mainContainer {
+    width: 355px;
+    height: 600px;
+  }
+
+  .imageContainer {
+    width: 300px;
+    height: 300px;
+    background-position: center;
+    box-sizing: border-box;
+  }
+
+  .textHeader h1 {
+    font-weight: 600px;
+  }
+
+  .paragraphContainer .priceContainer .timeContainer .creatorContainer {
+    font-size: 18px;
+  }
+
+  .paragraphContainer {
+    margin-bottom: 25px;
+  }
+
+  .priceContainer {
+    margin-right: 110px;
+    margin-bottom: 2px;
+  }
+
+  .creatorContainer {
+    margin-top: 20px;
+  }
+  .imageFooter {
+    width: 36px;
+    height: 36px;
+  }
+}
